[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Fonts/Futura Extra Black font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Buttons/Normal/quit_button_normal.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/futur.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://quad_128.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/Normal/restart_button_normal.png" type="Texture" id=5]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Buttons/Normal/next_button_normal.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/Pressed/next_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/Tiles/new_blank_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/Hovered/pause_button_hovered.png" type="Texture" id=10]
[ext_resource path="res://Assets/Buttons/Normal/pause_button_normal.png" type="Texture" id=11]
[ext_resource path="res://Assets/Buttons/Pressed/pause_button_pressed.png" type="Texture" id=12]
[ext_resource path="res://Assets/Fonts/pause_font.tres" type="DynamicFont" id=13]
[ext_resource path="res://Assets/Tiles/box.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=23]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=24]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=25]
background_mode = 4
adjustment_brightness = 0.3

[sub_resource type="TileSet" id=26]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="GUIBg" type="TextureRect" parent="."]
modulate = Color( 0.0509804, 0, 0.196078, 1 )
margin_right = 1024.0
margin_bottom = 32.0
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 6.0
margin_top = 193.0
margin_right = 101.0
margin_bottom = 207.0

[node name="PlaceLabel" type="RichTextLabel" parent="."]
margin_left = 111.0
margin_top = 8.0
margin_right = 305.0
margin_bottom = 28.0
custom_fonts/normal_font = SubResource( 19 )
text = "Places"

[node name="PlaceRefill" type="TextureProgress" parent="."]
margin_left = 102.0
margin_top = 4.0
margin_right = 106.0
margin_bottom = 28.0
value = 100.0
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_over = Color( 1, 0.866667, 0, 1 )
nine_patch_stretch = true

[node name="CutLabel" type="RichTextLabel" parent="."]
margin_left = 310.0
margin_top = 8.0
margin_right = 498.0
margin_bottom = 28.0
custom_fonts/normal_font = SubResource( 20 )
text = "Cuts"

[node name="CutRefill" type="TextureProgress" parent="."]
margin_left = 301.0
margin_top = 4.0
margin_right = 305.0
margin_bottom = 28.0
value = 100.0
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_over = Color( 1, 0.866667, 0, 1 )
nine_patch_stretch = true

[node name="TargetLabel" type="RichTextLabel" parent="."]
margin_left = 525.0
margin_top = 8.0
margin_right = 795.0
margin_bottom = 28.0
custom_fonts/normal_font = SubResource( 21 )
text = "Targets"

[node name="TimeLabel" type="RichTextLabel" parent="."]
margin_left = 753.0
margin_top = 8.0
margin_right = 1023.0
margin_bottom = 28.0
custom_fonts/normal_font = SubResource( 22 )
text = "Time"
scroll_active = false

[node name="DeathControl" type="Control" parent="."]
visible = false
margin_right = 7.0
margin_bottom = 6.0

[node name="DeathBg" type="TextureRect" parent="DeathControl"]
modulate = Color( 0.909804, 0.0509804, 0.0509804, 1 )
margin_left = 1.0
margin_top = 148.0
margin_right = 1022.0
margin_bottom = 450.0
texture = ExtResource( 4 )
expand = true

[node name="DeathLabel" type="RichTextLabel" parent="DeathControl"]
margin_top = 162.0
margin_right = 1022.0
margin_bottom = 383.0
custom_fonts/normal_font = SubResource( 23 )
bbcode_enabled = true
bbcode_text = "[center]You killed the robot!
You monster.
[/center]"
text = "You killed the robot!
You monster.
"
scroll_active = false

[node name="WinControl" type="Control" parent="."]
visible = false
margin_right = 6.0
margin_bottom = 4.0

[node name="WinBg" type="TextureRect" parent="WinControl"]
modulate = Color( 0.486275, 0.419608, 0.65098, 1 )
margin_top = 146.0
margin_right = 1024.0
margin_bottom = 452.0
texture = ExtResource( 4 )
expand = true

[node name="WinLabel" type="RichTextLabel" parent="WinControl"]
margin_left = 117.0
margin_top = 167.0
margin_right = 950.0
margin_bottom = 396.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 24 )
bbcode_enabled = true
bbcode_text = "[center]The robot won!
(aren't you proud?)"
text = "The robot won!
(aren't you proud?)"
scroll_active = false

[node name="PauseControl" type="Control" parent="."]
margin_right = 13.0
margin_bottom = 6.0

[node name="PauseBg" type="TextureRect" parent="PauseControl"]
modulate = Color( 1, 0, 0.960784, 1 )
margin_left = 352.0
margin_top = 70.0
margin_right = 702.0
margin_bottom = 532.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2

[node name="PauseBg2" type="TextureRect" parent="PauseControl"]
modulate = Color( 0.603922, 0.603922, 0.603922, 0.160784 )
margin_left = 352.0
margin_top = 70.0
margin_right = 702.0
margin_bottom = 532.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="Resume" type="RichTextLabel" parent="PauseControl"]
margin_left = 471.0
margin_top = 128.0
margin_right = 593.0
margin_bottom = 160.0
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Resume"
text = "Resume"
scroll_active = false

[node name="Restart" type="RichTextLabel" parent="PauseControl"]
margin_left = 471.0
margin_top = 160.0
margin_right = 593.0
margin_bottom = 192.0
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Restart
"
text = "Restart
"
scroll_active = false

[node name="Minimap" type="RichTextLabel" parent="PauseControl"]
margin_left = 471.0
margin_top = 192.0
margin_right = 593.0
margin_bottom = 224.0
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Minimap
"
text = "Minimap
"
scroll_active = false

[node name="LevelSelect" type="RichTextLabel" parent="PauseControl"]
margin_left = 426.0
margin_top = 224.0
margin_right = 642.0
margin_bottom = 256.0
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Level Select"
text = "Level Select"
scroll_active = false

[node name="Settings" type="RichTextLabel" parent="PauseControl"]
margin_left = 472.0
margin_top = 256.0
margin_right = 587.0
margin_bottom = 288.0
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Settings"
text = "Settings"
scroll_active = false

[node name="Exit" type="RichTextLabel" parent="PauseControl"]
margin_left = 493.0
margin_top = 288.0
margin_right = 561.0
margin_bottom = 320.0
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Exit"
text = "Exit"
scroll_active = false

[node name="DarkenBG" type="WorldEnvironment" parent="."]
environment = SubResource( 25 )

[node name="QuitButton" type="TextureButton" parent="."]
visible = false
margin_left = 600.0
margin_top = 380.0
margin_right = 728.0
margin_bottom = 444.0
texture_normal = ExtResource( 2 )

[node name="RestartButton" type="TextureButton" parent="."]
visible = false
margin_left = 280.0
margin_top = 380.0
margin_right = 408.0
margin_bottom = 444.0
texture_normal = ExtResource( 5 )

[node name="LevelButton" type="TextureButton" parent="."]
visible = false
margin_left = 440.0
margin_top = 380.0
margin_right = 568.0
margin_bottom = 444.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="PauseButton" type="TextureButton" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Minimap" type="TileMap" parent="."]
position = Vector2( 275, 189 )
scale = Vector2( 0.25, 0.25 )
z_index = 2
tile_set = SubResource( 26 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( 458824, 0, 0, 852034, 0, 0, 852040, 0, 0, 983104, 0, 0, 1114177, 0, 0 )

[node name="Line2D" type="Line2D" parent="Minimap"]
position = Vector2( -1100, -756 )
scale = Vector2( 4, 4 )
z_index = 6
width = 1.0
default_color = Color( 0.447059, 0.933333, 0.478431, 1 )

[connection signal="gui_input" from="PauseControl/Resume" to="." method="_on_Resume_gui_input"]
[connection signal="mouse_entered" from="PauseControl/Resume" to="." method="_on_Resume_mouse_entered"]
[connection signal="mouse_exited" from="PauseControl/Resume" to="." method="_on_Resume_mouse_exited"]
[connection signal="gui_input" from="PauseControl/Restart" to="." method="_on_Restart_gui_input"]
[connection signal="mouse_entered" from="PauseControl/Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="mouse_exited" from="PauseControl/Restart" to="." method="_on_Restart_mouse_exited"]
[connection signal="gui_input" from="PauseControl/Minimap" to="." method="_on_Minimap_gui_input"]
[connection signal="mouse_entered" from="PauseControl/Minimap" to="." method="_on_Minimap_mouse_entered"]
[connection signal="mouse_exited" from="PauseControl/Minimap" to="." method="_on_Minimap_mouse_exited"]
[connection signal="gui_input" from="PauseControl/LevelSelect" to="." method="_on_Level_Select_gui_input"]
[connection signal="mouse_entered" from="PauseControl/LevelSelect" to="." method="_on_LevelSelect_mouse_entered"]
[connection signal="mouse_exited" from="PauseControl/LevelSelect" to="." method="_on_LevelSelect_mouse_exited"]
[connection signal="gui_input" from="PauseControl/Settings" to="." method="_on_Settings_gui_input"]
[connection signal="mouse_entered" from="PauseControl/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="PauseControl/Settings" to="." method="_on_Settings_mouse_exited"]
[connection signal="gui_input" from="PauseControl/Exit" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="PauseControl/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="PauseControl/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="LevelButton" to="." method="_on_LevelButton_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
